--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -95,7 +95,7 @@
   --btn-bg-hover: var(--neutral-800);
   --btn-text-color: var(--text-color-invert);
   --btn-border-hover-color: transparent;
-  box-shadow:0 -2px 0 0 hsla(0, 0%, 0%, 0.2) inset, 0 8px 10px hsla(0, 0%, 100%, 0.12) inset;
+  box-shadow:0 -2px 0 0 hsla(0, 0%, 0%, 0.1) inset, 0 -4px 4px hsla(0, 0%, 50%, 0.1) inset;
 }
 
 .btn-primary{
@@ -103,14 +103,14 @@
   --btn-bg-hover: var(--primary-700-const);
   --btn-text-color: var(--text-color-white);
   --btn-border-hover-color: transparent;
-  box-shadow:0 -1px 0 0 hsla(0, 0%, 0%, 0.2) inset, 0 8px 10px hsla(0, 0%, 100%, 0.12) inset;
+  box-shadow:0 -2px 0 0 hsla(0, 0%, 0%, 0.1) inset, 0 -4px 4px hsla(0, 0%, 50%, 0.1) inset;
 }
 .btn-danger{
   --btn-bg: var(--danger-500);
   --btn-bg-hover: var(--danger-400);
   --btn-text-color: var(--text-color-white);
   --btn-border-hover-color: transparent;
-  box-shadow:0 -1px 0 0 hsla(0, 0%, 0%, 0.2) inset, 0 8px 10px hsla(0, 0%, 100%, 0.15) inset;
+  box-shadow:0 -2px 0 0 hsla(0, 0%, 0%, 0.1) inset, 0 -4px 4px hsla(0, 0%, 50%, 0.1) inset;
 }
 .btn-secondary {
   --btn-bg: var(--bg-color-raised);
@@ -126,7 +126,7 @@
   --btn-text-color: var(--text-color-danger);
   --btn-border-color: var(--border-color-base);
   --btn-border-hover-color: var(--border-color-strong);
-  box-shadow:0 -1px 0 0 hsla(0, 0%, 0%, 0.15) inset, 0 -4px 4px hsla(0, 0%, 50%, 0.1) inset;
+  box-shadow:0 -2px 0 0 hsla(0, 0%, 25%, 0.1) inset;
 }
 .btn-neutral{
   --btn-bg: var(--neutral-200);
