--- a/scss/utilities/_gap.scss
+++ b/scss/utilities/_gap.scss
@@ -1,12 +1,12 @@
 
 
 /// GAP SIZES
-$gap_nums: 0, 4px, 8px, 12px, 16px, 20px, 24px, 28px, 32px, 36px, 40px;
+$gap_nums: 0, 0px, 4px, 8px, 12px, 16px, 20px, 24px, 28px, 32px, 36px, 40px;
 
 @each $num in $gap_nums {
-  .gap-#{$num} { gap: #{$num}; }
-  .row-gap-#{$num} {  row-gap: #{$num}; }
-  .column-gap-#{$num} { column-gap: #{$num}; }
+  .gap-#{$num} { gap: #{$num}; --flex-gap:#{$num}; }
+  .row-gap-#{$num} {  row-gap: #{$num}; --flex-gap:#{$num}; }
+  .column-gap-#{$num} { column-gap: #{$num}; --flex-gap:#{$num}; }
 }
 
 // Generate responsive utility classes
@@ -15,9 +15,9 @@ $gap_nums: 0, 4px, 8px, 12px, 16px, 20px, 24px, 28px, 32px, 36px, 40px;
   @media (min-width: #{$size}){
 
     @each $num in $gap_nums {
-      .#{$breakpoint}\:gap-#{$num}px { gap: #{$num}; }
-      .#{$breakpoint}\:row-gap-#{$num}px {  row-gap: #{$num}; }
-      .#{$breakpoint}\:column-gap-#{$num}px { column-gap: #{$num}; }
+      .#{$breakpoint}\:gap-#{$num} { gap: #{$num}; --flex-gap:#{$num}; }
+      .#{$breakpoint}\:row-gap-#{$num} {  row-gap: #{$num}; --flex-gap:#{$num}; }
+      .#{$breakpoint}\:column-gap-#{$num} { column-gap: #{$num}; --flex-gap:#{$num}; }
     }
    // end breakpoint
    
